# PAM-OS

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/pam-os-memory/: SKILL.md  config.toml
.claude/skills/pam-os-memory/: SKILL.md
.github/workflows/: publish-docker-image.yml
config/: pam-os.example.toml
docs/: pam-os-skill-usage.md  usage.md
docs/design/: adaptive-learning-interaction-design.md  multi-user-v2.md  people-understanding-profile-memory.md
docs/diagrams/: memory-architecture.html
docs/superpowers/specs/: 2026-05-23-memory-provider-policy-pipeline-design.md  2026-05-24-windows-skill-installer-design.md  2026-06-04-llm-memory-extractor-design.md
eval/cases/: memory_quality_smoke.json
plugins/pam-os-memory/: .mcp.json
plugins/pam-os-memory/docs/: usage.md
scripts/: inspect_memory.py  install-codex-plugin.sh  install-plugin-local.ps1  install-plugin-local.sh  install-plugin.ps1  install-plugin.sh  install-skill.ps1  install-skill.sh  install.ps1  install.sh  update.sh
skills/pam-os-memory/: SKILL.md  config.toml
src/pam_os/: __init__.py  adaptive_learning.py  adaptive_policy.py  api.py  cli.py  config.py  consolidator.py  context.py  extractor.py  identity.py  llm_extractor.py  mcp.py  mcp_server.py  models.py  orchestrator.py  providers.py  quality.py  rule_provider.py  runtime.py  serialization.py  store.py  tenancy.py  version.py
tests/: test_api_auth.py  test_config.py  test_installers.py  test_mcp.py  test_runtime.py  test_skill_client.py  test_versioning.py
(+9 files in other folders)
