[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pam-os"
version = "0.1.0"
description = "Personal AI Memory OS MVP: local Personal Memory Runtime with SQLite, CLI, and REST."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PAM-OS" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
memory = "pam_os.cli:main"
pam-memory = "pam_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
