[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pam-os"
version = "0.5.2"
description = "Personal AI Memory OS: a REST-only memory runtime backed by SQLite."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PAM-OS" }]
license = { file = "LICENSE" }
dependencies = ["fastapi>=0.110", "pydantic>=2.7", "uvicorn>=0.27"]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
